# loz

./: .gitignore  .llvmenv  Cargo.toml  README.md  output.txt  test.sh
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/compiler/: Cargo.toml
core/compiler/lib/Std/Data/: List.loz  Maybe.loz  Result.loz
core/compiler/src/: ast.rs  generator.rs  inferencer.rs  interpreter.rs  lib.rs  loz.pest  module_system.rs  parser.rs  printer.rs  rewriter.rs
core/compiler/src/generator/: ir.rs
core/compiler/src/inferencer/: grapher.rs  substitutor.rs  unifier.rs
core/compiler/src/rewriter/: extractor.rs  flattener.rs  instantiator.rs  renamer.rs
core/compiler/tests/: integration.rs
core/compiler/tests/programs/bug/: generic_1.loz  record.loz
core/compiler/tests/programs/err/: call_undefined.loz  generic_1.loz  generic_2.loz  generic_3.loz  missing_main.loz  undefined_function_1.loz  undefined_function_2.loz  undefined_function_3.loz
core/compiler/tests/programs/generator/: add_float.loz  bool.loz  divide_int.loz  minus_int.loz  remainder_float.loz  string.loz  times_int.loz
core/compiler/tests/programs/ok/: adt.loz  adt_getter.loz  adt_getter.loz.res  closure.loz  closure_2.loz  curry.loz  find_with_age.loz  find_with_age.loz.res  generic_1.loz  generic_1.loz.res  generic_2.loz  generic_3.loz  generic_4.loz  generic_5.loz  generic_adt.loz  generic_adt.loz.res  generic_main.loz  generic_main.loz.res  lambda.loz  local_type.loz  main.loz  record.loz  record_dot_operator.loz  record_getter.loz  record_with_function.loz  refer_parent.loz  stdlib.loz  stdlib.loz.res  (+2 more)
(+164 files in other folders)
