[package]
name = "cli"
version = "0.1.0"
authors = ["Haye Böhm <haye.bohm@axians.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loz_compiler = {version = "0.1.0", path="../compiler"}

[[bin]]
name = "cloc"
path = "src/main.rs"