[package]
name = "loz_compiler"
version = "0.1.0"
authors = ["Haye Böhm <haye.bohm@axians.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
log = "0.4.8"
lazy_static = "1.4.0"
petgraph = "0.5.0"
