[package]
name = "loz-compiler"
version = "0.1.0"
authors = ["Haye Böhm <haye.bohm@gmail.com>"]
edition = "2018"

[dependencies]
pest = "2.1.2"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
petgraph = "0.5.0"
itertools = "0.9.0"
regex = "1"
number_prefix = "0.4.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
